tests/kyverno-policies/block-images-with-volumes/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: block-images-with-volumes
    resources:
      - name: busybox
        values:
          imageData.configData.config.Volumes: "0"
      - name: image-vol
        values:
          imageData.configData.config.Volumes: "1"
      - name: image-vol-skip1
        values:
          imageData.configData.config.Volumes: "1"
      - name: image-vol-skip2
        values:
          imageData.configData.config.Volumes: "1"
      - name: image-vol-skip3
        values:
          imageData.configData.config.Volumes: "1"
